# presentation-20260408-sem-phase-retrieval

./: 01.index.md  02.introductions.md  03.transmission-vs-reflection.md  04.reciprocity-principle.md  05.measurement-modalities.md  06.phase-problem.md  07.iterative-ptychography.md  08.weak-phase-approximation.md  09.single-sideband-reconstruction.md  10.bright-field-loop.md  11.parallax-imaging.md  12.streaming-parallax.md  13.experimental-upsampling.md  13.transmission-sem-ptychography.md  14.multislice-approximations.md  14.transmission-sem-ptychography.md  15.multislice-approximations.md  15.reflection-sem-ptychography.md  16.reflection-sem-ptychography.md  17.acknowledgements.md  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: draft.yml  submit.yml
notebooks/: 04.principle-of-reciprocity-nb.ipynb  05.stem-measurements-nb.ipynb  06.phase-problem-nb.ipynb  07.iterative-ptychography-nb.ipynb  08.weak-phase-approximation-nb.ipynb  09.single-sideband-nb.ipynb  10.bright-field-loop-nb.ipynb  12.streaming-parallax-nb.ipynb  13.upsampled-example.ipynb  14.pencil-beam-ptychography-nb.ipynb
notebooks/data/: goldNPs_parallax1x.npy  goldNPs_parallax_4x.npy  goldNPs_ptycho_1x.npy  goldNPs_ptycho_4x.npy  moS2_parallax_1x.npy  moS2_ptycho_4x.npy
